--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
+    "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.4.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
